Fixes #1473 : Board header allignments are uneven issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -77,11 +77,9 @@ main {
 	border: 1px solid #d7d9db;
 }
 .board-user-img {
+	border: 1px solid #d7d9db;
 	height: 32px;
 	width: 32px;
-}
-i.board-user-img.avatar{
-	.square(32px);
 }
 .cover-image {
 	border-radius: 3px;
